set anchors under the menu by spacing to top

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
                 </p>
             </div>
-            <div style="display:flex;">
+            <div style="display:flex; padding-right: 2%;">
                 <span id="menucontent" style="float:left;">
 
                 </span>
@@ -208,10 +208,11 @@
                     </span>
                 <span style="float:right; padding-top: 5px;">
 
+<a style="float:right;" id="refresh" href="#" data-tool="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(); return false" class="btn fade tooltip ">Refresh</a>
 
-                                    <a style="float:right;" id="refresh" href="#" data-tool="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(); return false" class="btn fade tooltip ">Refresh</a>
                     <a style="float:right;" data-tool="Wechsle zu deutschem Inhalt. Drücken Sie danach auf den 'Refresh'-Knopf!" href="index.html?lang=de" class="btn fade tooltip">DE</a>
-                    <a style="float:right; margin-right: 1px;" data-tool="Change to english content. After, click on the 'Erneuern'-Button!" href="index.html?lang=en" class="btn fade tooltip">EN</a>
+                    <a style="float:right;" data-tool="Change to english content. After, click on the 'Erneuern'-Button!" href="index.html?lang=en" class="btn fade tooltip">EN</a>
+                                                        
                     </span>
             </div>
         </div>
