add two new pictures, change text and add a little impressum

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 
     <div id="animationContainer">
         <div id="showContent" style="display: none"></div>
+        <div style="margin-left: 30%">Impressum: Everything is here is from myself, everything's <a href="GPLV2.txt">GPL-v2</a>-Licensed.</div>
     </div>
     <noscript>
         <h3>This site needs javascript to load it's contents</h3>
@@ -246,7 +247,6 @@
             </ul>
         </p>
     </noscript>
-
 </body>
 
 </html>
