--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
     <div id="animationContainer">
         <div id="showContent" style="display: none"></div>
-        <div style="margin-left: 30%">Impressum: Everything is here is from myself, everything's <a href="GPLV2.txt">GPL-v2</a>-Licensed.</div>
+        <div style="margin-left: 30%">Impressum: Everything here is from myself, everything's <a href="GPLV2.txt">GPL-v2</a>-Licensed.</div>
     </div>
     <noscript>
         <h3>This site needs javascript to load it's contents</h3>
