--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
 </head>
 
 <body>
-    <a name="onTop"></a>
+    <a id="onTop"></a>
     <div id="scroller" style="display:none">
         <div id="toc"></div>
         <div id="top">
             <a href="#onTop">
-                <img id="onTopImg" src="images/onTop.png" />
+                <img id="onTopImg" src="images/onTop.png" alt="Go on Top/Gehe nach zu oberst" />
             </a>
         </div>
     </div>
@@ -224,7 +224,7 @@
     </div>
     <noscript>
         <h3>This site needs javascript to load it's contents</h3>
-        <p>If you don't wanna do a risk, have a look to <a href="https://github.com/skamster/skamster.github.io/">skamster.github.io @ github</a>. Check it there for malware, none of my code will be executed. Elsewhere you could visit my github-account and look into the wikis..Docs:
+        <p>If you don't wanna do a risk, have a look to <a href="https://github.com/skamster/skamster.github.io/">skamster.github.io @ github</a>. Check it there for malware, none of my code will be executed. Elsewhere you could visit my github-account and look into the wikis..Docs:</p>
             <ul>
                 <li><a href="petaDocs/">Peta</a>
                 </li>
@@ -233,10 +233,10 @@
                 <li><a href="jobManagementDocs/">jobManagement</a>
                 </li>
             </ul>
-        </p>
+        
 
         <h3>Diese Seite braucht Javascript, um ihre Inhalte zu laden.</h3>
-        <p>Wenn Sie kein Risiko eingehen wollen, werfen Sie einen Blick auf <a href="https://github.com/skamster/skamster.github.io/">skamster.github.io @ github</a>. Überprüfen Sie die Seite dort auf Malware/schädlichen Code, es wird von meinem Code nichts ausgeführt. Ansonsten können Sie meine github-seite besuchen und dort in den Wikis stöbern..Dokumentationen:
+        <p>Wenn Sie kein Risiko eingehen wollen, werfen Sie einen Blick auf <a href="https://github.com/skamster/skamster.github.io/">skamster.github.io @ github</a>. Überprüfen Sie die Seite dort auf Malware/schädlichen Code, es wird von meinem Code nichts ausgeführt. Ansonsten können Sie meine github-seite besuchen und dort in den Wikis stöbern..Dokumentationen:</p>
             <ul>
                 <li><a href="petaDocs/">Peta</a>
                 </li>
@@ -245,7 +245,7 @@
                 <li><a href="jobManagementDocs/">jobManagement</a>
                 </li>
             </ul>
-        </p>
+        
     </noscript>
 </body>
 
