style-optimations and ontop-replacement

--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
 
                 </p>
             </div>
-            <div style="display:flex; padding-right: 2%;">
-                <span id="menucontent" style="float:left;">
+            <div style="display:inline-block; margin-right: 1%;">
+                <span id="menucontent" style="float:left; margin-left:2px;">
 
                 </span>
-                <span style="float:left; padding-top: 5px;">
-                <a target="_blank" style="float: left;" data-tool="Go to my personal github-account" href="https://github.com/skamster" class="btn tooltip fade">My GitHub</a>
+                <span style="float:left; padding-top: 4px;">
+                <a target="_blank" style="float: left;" data-tool="Go to my personal github-account" href="https://github.com/skamster" class="btn tooltip fade">GitHub</a>
                     </span>
-                <span style="float:right; padding-top: 5px;">
+                <span style="float:right; padding-top: 4px;">
 
 <a style="float:right;" id="refresh" href="#" data-tool="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(); return false" class="btn fade tooltip ">Refresh</a>
 
