--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     
     
-    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/ownScript.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/storyjs-embed.js"></script>
@@ -235,14 +235,14 @@
 
                 </p>
             </div>
-            <div style="display:inline-block; margin-right: 1%;">
-                <span id="menucontent" style="float:left; margin-left:2px;">
+            <div style="display:inline-table; margin-right:1%; margin-left:1%; min-width: 95%; max-width: 99%;">
+                <span id="menucontent">
 
                 </span>
-                <span style="float:left; padding-top: 4px;">
+                <span style="float:left;">
                 <a target="_blank" style="float: left;" data-tool="Go to my personal github-account" href="https://github.com/skamster" class="btn tooltip fade">GitHub</a>
                     </span>
-                <span style="float:right; padding-top: 4px;">
+                <span style="float:right;">
 
 <a style="float:right;" id="refresh" href="#" data-tool="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(); return false" class="btn fade tooltip ">Refresh</a>
 
