--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div id="animationContainer">
         <div id="showContent" style="display: none"></div>
 
-        <div style="margin-left: 30%">Impressum: Everything here is from myself, everything's <a href="GPLV2.txt">GPL-v2</a>-Licensed.</div>
+        <div style="margin-left: 30%">Impressum: Everything here is from myself, everything's <a href="GPLV2.txt">GPL-v2</a>-licensed.</div>
     </div>
     <noscript>
         <h3>This site needs javascript to load it's contents</h3>
