--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
                 });
 
             }
-
+            if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+                // some code..
+                alert(jData.transl.mobilephonehint);
+            }
             /**
                 Fade in loaded contents
             **/
