--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 $("#scroller").animate({
                     top: tocoffset
                 }, {
-                    duration: 250,
+                    duration: 1500,
                     queue: false
                 });
             });
@@ -179,8 +179,8 @@
                 });
 
             }
+            // looks if the client is a mobile device.
             if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-                // some code..
                 alert(jData.transl.mobilephonehint);
             }
             /**
