--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script src="js/jquery.zrssfeed.js" type="text/javascript"></script>
     <script src="js/jquery.vticker.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    
+    <link title="Example3" rel="alternate stylesheet" type="text/css" href="stylesheets/thirdCase.css" media="screen" />
+    <link title="Serious" rel=" stylesheet" type="text/css" href="stylesheets/serious.css" media="screen" />
     <link title="Spaced" rel="alternate stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link title="Example3" rel="stylesheet" type="text/css" href="stylesheets/thirdCase.css" media="screen" />
-    <link title="Serious" rel="alternate stylesheet" type="text/css" href="stylesheets/serious.css" media="screen" />
+    
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery.zrssfeed.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.10.4.custom.min.css" media="screen" />
