update to jQuery 2 and fix a failure by jQ1.7 used by storyjs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8'>
-    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/jquery-2.1.1.js"></script>
     <script src="js/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/ownScript.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/storyjs-embed.js"></script>
