center language-buttons and try to move tooltip a little

--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                     items: "img, [title]",
                     fixed: false,
                     position: {
-                        my: "center bottom-20",
-                        at: "center top"
+                        my: "right+120 bottom-20",
+                        at: "right+120 top"
                     },
                     content: function () {
                         var element = $(this);
@@ -404,10 +404,10 @@
                 <div class="righty">
                     <a id="refresh" href="#" title="This website is using your webstorage, what means it's offline useable. With one click, you could update the information." onclick="updateContent(); return false" class="btn fade ">Refresh</a> 
                 </div>
-                <div class="righty">
+                <div class="centry">
                     <a title="Wechsle zu deutschem Inhalt. Drücken Sie danach auf den 'Refresh'-Knopf!" href="index.html?lang=de" class="btn fade langbtn">DE</a>
                 </div>
-                <div class="righty">
+                <div class="centry">
                     <a title="Change to english content. After, click on the 'Erneuern'-Button!" href="index.html?lang=en" class="btn fade langbtn">EN</a>
                 </div>
             </div>
