--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="js/storyjs-embed.js"></script>
     <script src="js/jquery.fancybox.js" type="text/javascript"></script>
     <script src="js/jquery.mousewheel-3.0.6.pack.js" type="text/javascript"></script>
-    <script src="js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui.js" type="text/javascript"></script>
     <script src="js/jquery.zrssfeed.js" type="text/javascript"></script>
     <script src="js/jquery.vticker.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -20,7 +20,6 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery.zrssfeed.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.10.4.custom.min.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.theme.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery.fancybox.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui-1.10.4.custom.min.css" media="screen" />
@@ -132,7 +131,7 @@
                     var ProcessedHtml = processHtml(jData, lastName);
                     $("#toc").html(ProcessedHtml[1]);
                     $("#showContent").html(ProcessedHtml[0]);
-                    $("#impressum").html(jData.transl.impressum);
+                   // $("#impressum").html(jData.transl.impressum);
 
                 } else {
                     //In the second case, we have webstorage-support, but no data yet. So let's recive!
@@ -159,7 +158,7 @@
                         var ProcessedHtml = processHtml(jData, lastName);
                         $("#toc").html(ProcessedHtml[1]);
                         $("#showContent").html(ProcessedHtml[0]);
-                        $("#impressum").html(jData.transl.impressum);
+                        // $("#impressum").html(jData.transl.impressum);
                         tljqxhr.complete(function (tldata) {
                             console.log("Completemethod2 on timeline, let's do the work");
                             localStorage.tlData = tldata.responseText.replace("\n", "");
@@ -180,7 +179,7 @@
                     $("#toc").html(ProcessedHtml[1]);
                     $("#showContent").html(ProcessedHtml[0]);
                     $("#refresh").html(jData.transl.refresh + " (" + jData.transl.nowebstorage + ")");
-                    $("#impressum").html(jData.transl.impressum);
+                  //  $("#impressum").html(jData.transl.impressum);
                 });
                 tljqxhr.complete(function (tldata) {
                     createTimeline(jQuery.parseJSON(tldata.responseText.replace("\n", "")), jData.transl.lang);
@@ -224,22 +223,33 @@
             /**
                 Fade in loaded contents withouth jquery-ui
             **/
+            $( "#progress" ).progressbar();
+            $( "#progress" ).progressbar( "enable" );
+            $( "#progress" ).progressbar( "option", "value", 0 );
             $("#showContent").show("slide", {
                 direction: "right"
             }, 1000, function () {
+                $( "#progress" ).progressbar( "option", "value", 25 );
                 $("#news").hide("explode", {
                 
                 }, 500, function () {
+                $( "#progress" ).progressbar( "option", "value", 35 );
                 $("#menu").show("shake", {
                     times: 5,
                     distance: 20
                 }, "easeInExpo", function () {
+                    $( "#progress" ).progressbar( "option", "value", 50 );
                     $("#scroller").show("drop", {
                         direction: "right"
                     }, "easeInExpo", function () {
+                        $( "#progress" ).progressbar( "option", "value", 75 );
                         $("#impressum").show("slide", {
                             direction: "down"
                         }, 500, function () {
+                            $( "#progress" ).progressbar( "option", "value", 100 );
+                            $( "#progress" ).hide("pulsate",{},800, function () {});
+                            // $( "#progress" ).progressbar("destroy");
+                            $("#impressum").html(jData.transl.impressum);
                             $(window).scroll(function () {
                                 if ($(window).scrollTop() + $(window).height() < $(document).height()) {
                                     $("#impressum").show("pulsate", {}, 800, function () {});
@@ -375,8 +385,9 @@
     </script>
 </head>
 
-<body style="background-color: black">
+<body style="background-color: black" id="body">
     <a id="onTop"></a>
+    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed;"></div>
     <div id="scroller" style="display:none">
         <div id="toc"></div>
         <div id="top">
@@ -418,7 +429,7 @@
     <div id="animationContainer">
         <div id="showContent" style="display: none;"></div>
 
-        <div id="impressum" style="display: none;">Impressum: Everything here is from myself (except marked libs and timeline-pictures), everything's <a href="gpl-2.0.txt">GPL-v2</a>-licensed.</div>
+        <div id="impressum" style="display: block;"></div>
     </div>
     <noscript>
         <h3>This site needs javascript to load it's contents</h3>
